k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fcs-notifications-service
  namespace: fcs-notifications
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: fcs-notifications
  ports:
    - name: http
      port: 8080
      targetPort: http
